--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
-        <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+        <link rel="stylesheet" href="{{ asset('assets/css/flatly_bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/all.min.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
     </head>
     <body>
@@ -22,11 +23,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_support_index') }}">Support</a>
                     </li>
-                    {% if not app.user %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
-                        </li>
-                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_user_index') }}">Gestion utilisateur</a>
+                    </li>
+                    {% if app.user %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a>
                         </li>
