--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -23,9 +23,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_support_index') }}">Support</a>
                     </li>
+                    {% if is_granted('ROLE_ADMIN') %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_user_index') }}">Gestion utilisateur</a>
                     </li>
+                    {% endif %}
                     {% if app.user %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('security_logout') }}">Déconnexion</a>
