--- a/site/templates/support/index.html.twig
+++ b/site/templates/support/index.html.twig
@@ -5,8 +5,8 @@
 {% block body %}
     <div class="box">
         <div class="box-header">
-            <h1 class="box-title">{{ 'Liste des supports'|trans }}</h1>
-            <a href="{{ url('app_support_new') }}" class="btn btn-primary top-btn">{{ 'Créer un support'|trans }}</a>
+            <h1 class="box-title">Liste des supports</h1>
+            <a href="{{ path('app_support_new') }}" class="btn btn-primary top-btn">Créer un support</a>
         </div>
         <div class="box-body">
             <table class="table table-striped dataTable" role="grid">
