--- a/site/templates/home.html.twig
+++ b/site/templates/home.html.twig
@@ -1,5 +1,48 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Hello world !!!</h1>
+    <div class="box">
+        <div class="box-header">
+            <h2 class="box-title">Historique</h2>
+        </div>
+        <div class="box-body">
+            <table class="table table-striped dataTable" role="grid">
+                <thead>
+                <tr role="row">
+                    <th>Date</th>
+                    <th>Utilisateur</th>
+                    <th>Article</th>
+                    <th>Action</th>
+                    <th>Quantité</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for historique in historiques %}
+                    <tr role="row">
+                        <td>{{ historique.date }}</td>
+                        <td>{{ historique.utilisateur }}</td>
+                        <td>{{ historique.support.id }}</td>
+                        <td>{{ historique.action }}</td>
+                        <td>{{ historique.quantite }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+    <div class="row">
+        <img src="http://via.placeholder.com/640x360" alt="" class="col-sm-5">
+        <div class="col-sm-7">
+            <h3>Lycée Lafayette</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam maxime necessitatibus nemo nostrum sed veritatis! Accusantium, dolores ex fuga laborum numquam quam quia quis soluta totam voluptas. Nobis, reiciendis.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-7">
+            <h3>Isila</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam maxime necessitatibus nemo nostrum sed veritatis! Accusantium, dolores ex fuga laborum numquam quam quia quis soluta totam voluptas. Nobis, reiciendis.</p>
+        </div>
+        <img src="http://via.placeholder.com/640x360" alt="" class="col-sm-5">
+    </div>
 {% endblock %}
