ajout section Divers

--- a/site/templates/home.html.twig
+++ b/site/templates/home.html.twig
@@ -40,7 +40,7 @@
     </div>
     <div class="row">
         <div class="col-sm-7">
-            <h3>Isila</h3>
+            <h3>Isima</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam maxime necessitatibus nemo nostrum sed veritatis! Accusantium, dolores ex fuga laborum numquam quam quia quis soluta totam voluptas. Nobis, reiciendis.</p>
         </div>
         <img src="http://via.placeholder.com/640x360" alt="" class="col-sm-5">
