--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_liquide_index') }}">Encre</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_divers_index') }}">Divers</a>
+                    </li>
                     {% if is_granted('ROLE_ADMIN') %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_user_index') }}">Gestion utilisateur</a>
