--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Gestion des Stocks{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
         <link rel="stylesheet" href="{{ asset('assets/css/flatly_bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/all.min.css') }}">
