--- a/site/templates/home.html.twig
+++ b/site/templates/home.html.twig
@@ -83,7 +83,7 @@
     </div>
     
     <div class="row">
-        <img src="http://via.placeholder.com/640x360" alt="" class="col-sm-5">
+        <img src="assets/images/Lafayette.jpg" alt="" class="col-sm-5">
         <div class="col-sm-7">
             <h3>Lycée Lafayette</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam maxime necessitatibus nemo nostrum sed veritatis! Accusantium, dolores ex fuga laborum numquam quam quia quis soluta totam voluptas. Nobis, reiciendis.</p>
@@ -94,6 +94,6 @@
             <h3>Isima</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam maxime necessitatibus nemo nostrum sed veritatis! Accusantium, dolores ex fuga laborum numquam quam quia quis soluta totam voluptas. Nobis, reiciendis.</p>
         </div>
-        <img src="http://via.placeholder.com/640x360" alt="" class="col-sm-5">
+        <img src="assets/images/ISIMA-300x162.jpg" alt="" class="col-sm-5">
     </div>
 {% endblock %}
