ajout branche fusion des types
il y a problème sur le submit dans site\templates\item\_form_search.html.twig que j'arrive pas à régler.

--- a/site/templates/item/edit.html.twig
+++ b/site/templates/item/edit.html.twig
@@ -2,14 +2,14 @@
 
 {% block body %}
     <h1>
-        Ajout Encre
+        {{ 'Ajout Item'|trans }}
     </h1>
 
     <div class="col-sm-12">
         <!-- Tab panes -->
         <div class="tab-content">
             <div role="tabpanel" class="tab-pane active" id="informations">
-                {{ include('liquide/_form.html.twig') }}
+                {{ include('item/_form.html.twig') }}
             </div>
         </div>
     </div>
