--- a/site/templates/liquide/index.html.twig
+++ b/site/templates/liquide/index.html.twig
@@ -1,12 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}liquides{% endblock %}
+{% block title %}Liquides{% endblock %}
 
 {% block body %}
     <div class="box">
         <div class="box-header">
             <h1 class="box-title">Liste des liquides</h1>
-            <a href="{{ path('app_liquide_new') }}" class="btn btn-primary top-btn">Créer un liquide</a>
         </div>
         <div class="box-body">
             <table class="table table-striped dataTable" role="grid">
