--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Gestion des Stocks{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('assets/css/flatly_bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/all.min.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
+        {% endblock %}
+
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -19,6 +21,9 @@
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="{{ path('home') }}">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_item_index') }}">Item</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_support_index') }}">Support</a>
@@ -41,6 +46,18 @@
                     {% endif %}
                 </ul>
             </div>
+
+            <ul class="nav nav-pills">
+                <li class="nav-item dropdown">
+                    <a class="btn btn-primary top-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ajouter Item</a>
+                    <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 38px, 0px);">
+                        <a class="dropdown-item" href="{{ path('app_support_new') }}">Support</a>
+                        <a class="dropdown-item" href="{{ path('app_liquide_new') }}">Encre</a>
+                        <a class="dropdown-item" href="{{ path('app_divers_new') }}">Autres</a>
+                        <a class="dropdown-item" href="{{ path('app_item_new') }}">Item</a>
+                    </div>
+                </li>
+            </ul>
         </nav>
 
         <div class="container">
