--- a/site/templates/item/index.html.twig
+++ b/site/templates/item/index.html.twig
@@ -1,36 +1,40 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}divers{% endblock %}
+{% block title %}Items{% endblock %}
 
 {% block body %}
+
     <div class="box">
+        <div class="titre">
+            <h1 class="box-title">Liste des items</h1>
+        </div>
+
+        {{ include('item/_form_search.html.twig') }}
 
         <div class="box-body">
             <table class="table table-striped dataTable" role="grid">
                 <thead>
                     <tr role="row">
-                        <th>Article</th>
+                        <th>Référence</th>
+                        <th>Désignation</th>
+                        <th>Emplacement</th>
                         <th>Quantite</th>
-                        <th>Couleur</th>
-                        <th>Format</th>
-                        <th>Type<th>
                         <th></th>
                     </tr>
                 </thead>
                 <tbody>
-                {% for divers in diverss %}
+                {% for item in items %}
                     <tr role="row">
-                        <td>{{ divers.id }}</td>
-                        <td>{{ divers.quantite }}</td>
-                        <td>{{ divers.couleur }}</td>
-                        <td>{{ divers.format }}</td>
-                        <td>{{ divers.type }}</td>
+                        <td>{{ item.reference }}</td>
+                        <td>{{ item.designation }}</td>
+                        <td>{{ item.emplacement }}</td>
+                        <td>{{ item.quantite }}</td>
                         <td class="actions_form row">
-                            <a href="{{ path('app_divers_edit', { 'id': divers.id}) }}" class="btn btn-primary">
+                            <a href="{{ path('app_item_edit', { 'id': item.id}) }}" class="btn btn-primary">
                                 <i class="fa fa-pencil-alt"></i>
                             </a>
                             {% if isAdmin %}
-                                {{ include('divers/_delete.html.twig') }}
+                                {{ include('item/_delete.html.twig') }}
                             {% endif %}
                         </td>
                     </tr>
@@ -40,3 +44,4 @@
         </div>
     </div>
 {% endblock %}
+
