--- a/site/templates/support/edit.html.twig
+++ b/site/templates/support/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
     <h1>
-        {{ 'Informations'|trans }}
+        {{ 'Ajout Support'|trans }}
     </h1>
 
     <div class="col-sm-12">
