--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -21,6 +21,9 @@
                         <a class="nav-link" href="{{ path('home') }}">Accueil</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_produit_index') }}">Produit</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_support_index') }}">Support</a>
                     </li>
                     <li class="nav-item">
