--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -1,3 +1,5 @@
+{% set link = app.request.get('_route') %}
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -6,6 +8,9 @@
         {% block stylesheets %}{% endblock %}
         <link rel="stylesheet" href="{{ asset('assets/css/flatly_bootstrap.min.css') }}">
         <link rel="stylesheet" href="{{ asset('assets/css/all.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/datatable.min.css') }}">
+        <link rel="stylesheet" href="{{ asset('assets/css/select2.min.css') }}">
+
         <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
     </head>
     <body>
@@ -17,24 +22,18 @@
 
             <div class="collapse navbar-collapse" id="navbarColor03">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item {% if 'home' in link %}active{% endif %}">
                         <a class="nav-link" href="{{ path('home') }}">Accueil</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_produit_index') }}">Produit</a>
+                    <li class="nav-item {% if 'produit' in link %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('app_produit_index') }}">Produits</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_support_index') }}">Support</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_liquide_index') }}">Encre</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_divers_index') }}">Divers</a>
+                    <li class="nav-item {% if 'tutoriel' in link %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('app_tutoriel_index') }}">Tutoriel</a>
                     </li>
                     {% if is_granted('ROLE_ADMIN') %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_user_index') }}">Gestion utilisateur</a>
+                    <li class="nav-item {% if 'user' in link %}active{% endif %}">
+                        <a class="nav-link" href="{{ path('app_user_index') }}">Utilisateurs</a>
                     </li>
                     {% endif %}
                     {% if app.user %}
@@ -49,9 +48,14 @@
         <div class="container">
             {% block body %}{% endblock %}
         </div>
+
         {% block javascripts %}
             <script src="{{ asset('assets/js/jquery3.3.1.js') }}"></script>
             <script src="{{ asset('assets/js/bootstrap4.1.3.js') }}"></script>
+            <script src="{{ asset('assets/js/datatable.min.js') }}"></script>
+            <script src="{{ asset('assets/js/select2.min.js') }}"></script>
+
+            <script src="{{ asset('assets/js/script.js') }}"></script>
         {% endblock %}
     </body>
 </html>
