--- a/site/templates/home.html.twig
+++ b/site/templates/home.html.twig
@@ -19,11 +19,12 @@
                 <tbody>
                 {% for historique in historiques %}
                     <tr role="row">
-                        <td>{{ historique.date }}</td>
-                        <td>{{ historique.utilisateur }}</td>
-                        <td>{{ historique.support.id }}</td>
+                        <td>{{ historique.date | date('d/m/Y') }}</td>
+                        <td>{{ historique.user.login }}</td>
+                        <td>{{ historique.produit.reference }}</td>
                         <td>{{ historique.action }}</td>
-                        <td>{{ historique.quantite }}</td>
+                        <td>{% if 0 < historique.quantite %}+{% endif %}</span>{{ historique.quantite }}
+                        </td>
                     </tr>
                 {% endfor %}
                 </tbody>
@@ -31,59 +32,18 @@
         </div>
     </div>
 
+    <hr>
+
     <div class="teststat">
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-        <script type="text/javascript">
-            google.charts.load("current", {packages:["corechart"]});
-            google.charts.setOnLoadCallback(drawChart);
-        function drawChart() {
-            //pour aller chercher la data dans une BD:
-            //https://developers.google.com/chart/interactive/docs/queries
-            var data = google.visualization.arrayToDataTable([
-                ['Dinosaur', 'Length'],
-                ['Acrocanthosaurus (top-spined lizard)', 12.2],
-                ['Albertosaurus (Alberta lizard)', 9.1],
-                ['Allosaurus (other lizard)', 12.2],
-                ['Apatosaurus (deceptive lizard)', 22.9],
-                ['Archaeopteryx (ancient wing)', 0.9],
-                ['Argentinosaurus (Argentina lizard)', 36.6],
-                ['Baryonyx (heavy claws)', 9.1],
-                ['Brachiosaurus (arm lizard)', 30.5],
-                ['Ceratosaurus (horned lizard)', 6.1],
-                ['Coelophysis (hollow form)', 2.7],
-                ['Compsognathus (elegant jaw)', 0.9],
-                ['Deinonychus (terrible claw)', 2.7],
-                ['Diplodocus (double beam)', 27.1],
-                ['Dromicelomimus (emu mimic)', 3.4],
-                ['Gallimimus (fowl mimic)', 5.5],
-                ['Mamenchisaurus (Mamenchi lizard)', 21.0],
-                ['Megalosaurus (big lizard)', 7.9],
-                ['Microvenator (small hunter)', 1.2],
-                ['Ornithomimus (bird mimic)', 4.6],
-                ['Oviraptor (egg robber)', 1.5],
-                ['Plateosaurus (flat lizard)', 7.9],
-                ['Sauronithoides (narrow-clawed lizard)', 2.0],
-                ['Seismosaurus (tremor lizard)', 45.7],
-                ['Spinosaurus (spiny lizard)', 12.2],
-                ['Supersaurus (super lizard)', 30.5],
-                ['Tyrannosaurus (tyrant lizard)', 15.2],
-                ['Ultrasaurus (ultra lizard)', 30.5],
-                ['Velociraptor (swift robber)', 1.8]]);
-
-        var options = {
-          title: 'Lengths of dinosaurs, in meters',
-          legend: { position: 'none' },
-        };
-
-        var chart = new google.visualization.Histogram(document.getElementById('chart_div'));
-        chart.draw(data, options);
-      }
-    </script>
-    <div id="chart_div" style="width: 900px; height: 500px;"></div>
+        <div id="chart_div" style="width: 900px; height: 500px;"></div>
     </div>
     
+    <hr>
+    
     <div class="row">
-        <img src="assets/images/Lafayette.jpg" alt="" class="col-sm-5">
+        <div class="image-container col-sm-5">
+            <img src="assets/images/Lafayette.jpg" alt="Photo du lycée La Fayette">
+        </div>
         <div class="col-sm-7">
             <h3>Lycée Lafayette</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam maxime necessitatibus nemo nostrum sed veritatis! Accusantium, dolores ex fuga laborum numquam quam quia quis soluta totam voluptas. Nobis, reiciendis.</p>
@@ -94,6 +54,22 @@
             <h3>Isima</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aperiam maxime necessitatibus nemo nostrum sed veritatis! Accusantium, dolores ex fuga laborum numquam quam quia quis soluta totam voluptas. Nobis, reiciendis.</p>
         </div>
-        <img src="assets/images/ISIMA-300x162.jpg" alt="" class="col-sm-5">
+
+        <div class="image-container col-sm-5">
+            <img src="assets/images/ISIMA.jpg" alt="Photo de l'école d'ingénieur de l'ISIMA">
+        </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
+    <script type="text/javascript" src="assets/js/chart-loader.js"></script>
+    
+    <script type="text/javascript">
+        $('.dataTable').DataTable();
+
+        google.charts.load("current", {packages:["corechart"]});
+        google.charts.setOnLoadCallback(drawChart);
+    </script>
 {% endblock %}
