--- a/site/templates/produit/_form_search.html.twig
+++ b/site/templates/produit/_form_search.html.twig
@@ -10,6 +10,6 @@
     </div>
 
     <div class="form-group col-sm-3">
-        {{ form_widget(form.submit, {'attr': {'class': 'btn btn-success form-control'}, 'label': 'Rechercher'}) }}
+        {{ form_widget(form.submit, {'attr': {'class': 'btn btn-success form-control'}, 'label': 'Lancer la recherche'}) }}
     </div>
 {{ form_end(form) }}
