--- a/site/templates/security/login.html.twig
+++ b/site/templates/security/login.html.twig
@@ -6,7 +6,7 @@
     
     <form action="{{ path('security_login') }}" method="post">
         <div class="form-group">
-            <input placeholder="Adresse mail..." required name="_username" type="text" class="form-control">
+            <input placeholder="Identifiant..." required name="_username" type="text" class="form-control">
         </div>
         <div class="form-group">
             <input placeholder="Mot de passe..." required name="_password" type="password" class="form-control">
