--- a/site/templates/security/registration.html.twig
+++ b/site/templates/security/registration.html.twig
@@ -8,6 +8,7 @@
 
     {{ form_row(form.username,  {'label': 'Nom de l\'utilisateur', 'attr': {'placeholder': 'Nom de l\'utilisateur...'}}) }}
     {{ form_row(form.email, {'label': 'Adresse mail', 'attr': {'placeholder': 'Adresse mail...'}}) }}
+    {{ form_row(form.login, {'label': 'Identifiant', 'attr': {'placeholder': 'Identifiant...'}}) }}
     {{ form_row(form.password, {'label': 'Mot de passe', 'attr': {'placeholder': 'Mot de passe...'}}) }}
     {{ form_row(form.confirm_password, {'label': 'Confirmation de mot de passe', 'attr': {'placeholder': 'Répétez votre mot de passe'}}) }}
 
