--- a/site/templates/user/edit.html.twig
+++ b/site/templates/user/edit.html.twig
@@ -4,49 +4,27 @@
 
     <h1>Utilisateur</h1>
 
-    {{ form_start(user) }}
+    {{ form_start(user, {'attr': {'class': 'form-horizontal row'}}) }}
 
-    <div class="box-body col-sm-6">
-        <div class="form-group">
-            {{ form_label(user.email, null, {'label': 'Adresse mail', 'label_attr': {'class': 'col-sm-12'}}) }}
-            <div class="col-sm-12">
-                {{ form_widget(user.email, {'attr': {'class': 'form-control', 'placeholder': 'Adresse mail...'}}) }}
-            </div>
-        </div>
-        
-        <div class="form-group">
-            {{ form_label(user.roles, null, {'label': 'Roles', 'label_attr': {'class': 'col-sm-12'}}) }}
-            <div class="col-sm-12">
-                {{ form_widget(user.roles, {'attr': {'class': 'form-control select', 'placeholder': 'Adresse mail...'}}) }}
-            </div>
+    {{ include('user/_form.html.twig') }}
+
+    <div class="box-footer col-sm-12">
+        <div class="row">
+            <a href="{{ url("app_user_index") }}" class="btn btn-secondary">Annuler</a>
+            <button type="submit" class="btn btn-primary btn-box">
+                {% if new %}
+                    Créer l'utilisateur
+                {% else %}
+                    Enregistrer les modifications
+                {% endif %}
+            </button>
         </div>
     </div>
-    <div class="box-body col-sm-6">
-        <div class="form-group">
-            {{ form_label(user.password, null, {'label': 'Mot de passe', 'label_attr': {'class': 'col-sm-12'}}) }}
-            <div class="col-sm-12">
-                {{ form_widget(user.password, {'attr': {'class': 'form-control', 'placeholder': 'Mot de passe...'}}) }}
-            </div>
-        </div>
-        
-        <div class="form-group">
-            {{ form_label(user.confirm_password, null, {'label': 'Confirmation de mot de passe', 'label_attr': {'class': 'col-sm-12'}}) }}
-            <div class="col-sm-12">
-                {{ form_widget(user.confirm_password, {'attr': {'class': 'form-control', 'placeholder': 'Répétez votre mot de passe'}}) }}
-            </div>
-        </div>
-    </div>
-
-    <button type="submit" class="btn btn-success">
-        {% if new %}
-            Créer l'utilisateur
-        {% else %}
-            Enregistrer les modifications
-        {% endif %}
-    </button>
 
     {{ form_widget(user._token) }}
     {{ form_end(user, {'render_rest': false}) }}
+
+    <hr>
 
     {% if not new %}
         <div class="box">
@@ -67,11 +45,13 @@
                     <tbody>
                     {% for historique in historiques %}
                         <tr role="row">
-                            <td>{{ historique.date }}</td>
-                            <td>{{ historique.utilisateur }}</td>
-                            <td>{{ historique.support.id }}</td>
+                            <td>{{ historique.date | date('d/m/Y') }}</td>
+                            <td>{{ historique.user.login }}</td>
+                            <td>{{ historique.produit.id }}</td>
                             <td>{{ historique.action }}</td>
-                            <td>{{ historique.quantite }}</td>
+                            <td>
+                                <span class="fa fa-{% if 0 < historique.quantite %}plus{% else %}minus{% endif %}"></span> {{ historique.quantite | abs }}                                
+                            </td>
                         </tr>
                     {% endfor %}
                     </tbody>
@@ -83,7 +63,12 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
+
     <script>
+        $('.dataTable').DataTable();
+        $('.select2').select2();
+
         let selects = document.getElementsByClassName("select");
         for (var i = 0; i < selects.length; i++) {
             selects[i].removeAttribute("multiple");
