--- a/site/templates/user/index.html.twig
+++ b/site/templates/user/index.html.twig
@@ -4,15 +4,19 @@
 
 {% block body %}
     <div class="box">
-        <div class="box-header">
-            <h1 class="box-title">Liste des utilisateurs</h1>
-            <a href="{{ url('app_user_create') }}" class="btn btn-primary top-btn">Créer un utilisateur</a>
+        <div class="box-header div-titre-btn">
+            <div class="titre">
+                <h1 class="box-title">Liste des utilisateurs</h1>
+            </div>
+            <div class="bouton">
+                <a href="{{ url('app_user_create') }}" class="btn btn-primary top-btn">Créer un utilisateur</a>
+            </div>
         </div>
         <div class="box-body">
             <table class="table table-striped dataTable" role="grid">
                 <thead>
                     <tr role="row">
-                        <th>Id</th>
+                        <th>Login</th>
                         <th>Email</th>
                         <th>Roles</th>
                         <th></th>
@@ -21,17 +25,18 @@
                 <tbody>
                 {% for user in users %}
                     <tr role="row">
-                        <td>{{ user.id }}</td>
+                        <td>{{ user.login }}</td>
                         <td>{{ user.email }}</td>
                         <td>
                             {% for role in user.roles %}
-                                {{ role }}
+                                [ {{ role }} ] 
                             {% endfor %}
                         </td>
                         <td class="actions_form row">
                             <a href="{{ path('app_user_edit', { 'id': user.id}) }}" class="btn btn-primary">
                                 <i class="fa fa-pencil-alt"></i>
                             </a>
+                            {{ include('user/_delete.html.twig') }}
                         </td>
                     </tr>
                 {% endfor %}
