--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -47,6 +47,13 @@
                 </ul>
             </div>
 
+            {% if app.user %}
+            <button class="btn btn-primary top-btn" type="button">
+                <a href="/templates/camera/index.html.twig">Scan</a>
+            </button>
+            {% endif %}
+
+            {% if is_granted('ROLE_ADMIN') %}
             <ul class="nav nav-pills">
                 <li class="nav-item dropdown">
                     <a class="btn btn-primary top-btn nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ajouter Item</a>
@@ -58,6 +65,7 @@
                     </div>
                 </li>
             </ul>
+            {% endif %}
         </nav>
 
         <div class="container">
