--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -43,6 +43,7 @@
                     {% endif %}
                 </ul>
             </div>
+            <a class="btn btn-primary" href="{{ path('scan') }}">Scan</a>
         </nav>
 
         <div class="container">
@@ -54,7 +55,6 @@
             <script src="{{ asset('assets/js/bootstrap4.1.3.js') }}"></script>
             <script src="{{ asset('assets/js/datatable.min.js') }}"></script>
             <script src="{{ asset('assets/js/select2.min.js') }}"></script>
-
             <script src="{{ asset('assets/js/script.js') }}"></script>
         {% endblock %}
     </body>
