--- a/site/templates/user/_form.html.twig
+++ b/site/templates/user/_form.html.twig
@@ -32,7 +32,7 @@
     <div class="form-group">
         {{ form_label(user.roles, null, {'label': 'Roles', 'label_attr': {'class': 'col-sm-12'}}) }}
         <div class="col-sm-12">
-            {{ form_widget(user.roles, {'attr': {'class': 'form-control select2'}}) }}
+            {{ form_widget(user.roles, {'attr': {'class': 'form-control select'}}) }}
         </div>
     </div>
 </div>
