--- a/site/public/assets/css/style.css
+++ b/site/public/assets/css/style.css
@@ -54,3 +54,31 @@ table .fa {
 .btn-box {
     margin-left: 15px;
 }
+
+.disabled {
+    background-color: #ecf0f1;
+    /* opacity: 1; */
+    cursor: default;
+    pointer-events: none;
+}
+
+#interactive.viewport {
+    position: relative; 
+    width: 100%; 
+    height: auto; 
+    overflow: hidden; 
+    text-align: center;
+}
+
+#interactive.viewport > canvas, 
+#interactive.viewport > video {
+    max-width: 100%;
+    width: 100%;
+}
+
+canvas.drawing, 
+canvas.drawingBuffer {
+    position: absolute; 
+    left: 0; 
+    top: 0;
+}
