--- a/site/templates/produit/_form.html.twig
+++ b/site/templates/produit/_form.html.twig
@@ -1,11 +1,19 @@
 <div class="form-group">
     {{ form_label(produit.reference, null, {'label': 'Référence', 'label_attr': {'class': 'form-control-label'}}) }}
-    {{ form_widget(produit.reference, {'attr': {'class': 'form-control'}}) }}
+    {% if is_granted('ROLE_ADMIN') %}    
+        {{ form_widget(produit.reference, {'attr': {'class': 'form-control'}}) }}
+    {% else %}
+        {{ form_widget(produit.reference, {'attr': {'class': 'form-control disabled'}}) }}
+    {% endif %}
 </div>
 
 <div class="form-group">
     {{ form_label(produit.designation, null, {'label': 'Designation', 'label_attr': {'class': 'form-control-label'}}) }}
-    {{ form_widget(produit.designation, {'attr': {'class': 'form-control'}}) }}
+    {% if is_granted('ROLE_ADMIN') %}    
+        {{ form_widget(produit.designation, {'attr': {'class': 'form-control'}}) }}
+    {% else %}
+        {{ form_widget(produit.designation, {'attr': {'class': 'form-control disabled'}}) }}
+    {% endif %}
 </div>
 
 <div class="form-group">
