--- a/site/templates/tutoriel.html.twig
+++ b/site/templates/tutoriel.html.twig
@@ -1,5 +1,58 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Tuto</h1>
+    <h2>Fonctionnement de l'application</h2>
+
+    <div>
+        <br/>
+        <h4>Accueil</h4>
+        <p>Sur la page d'accueil se situe un historique des transactions effectuées, la quantité retirée ou
+            ajoutée pour chaque élément du stock et l'identifiant de l'utilisateur ayant réalisé cette transaction.
+            En dessous de l'historique, un diagramme montre la quantité des produits.
+        </p>
+    </div>
+    <div>
+        <h4>Stock</h4>
+        <h5>Faire une recherche dans le stock</h5>
+        <p>La page de gestion des produits : elle permet de trouver les produits recherchés grâce à une recherche multicritère selon les paramètres définissant chaque produit du stock.
+            On peut donc rechercher un produit par sa référence (code-barres du produit), sa désignation,son emplacement, ou encore par quantité minimum.<br/>
+            La recherche par référence peut être facilitée par l'utilisation d'un lecteur de code-barres, qui est facilement activable (seulement disponible pour les appareils disposant d'un appareil photo)
+            à l'aide du bouton <b>Scanner</b> situé en haut à gauche de l'écran.
+            Scanner le code-barres d'un produit lancera directement la recherche du produit dans la base de données et trouvera, s'il existe le produit lié à ce code-barres pour en déterminer sa quantité
+            ou son emplacement (par exemple dans le cas d'un nouvel arrivage pour ranger un produit.<br/>
+            En revanche, si le produit scanné n'existe pas, le scan créera ce nouveau produit et il faudra taper les
+            informations de ce nouveau produit.
+        </p>
+        <h5>Ajouter un produit</h5>
+        On peut ajouter le produit de 2 manières:
+        <br/>
+        <ol>
+            <li>Comme expliqué ci dessus en scannant un produit qui n'existe pas dans la base de données du stock.</li>
+            <li>En cliquant sur le bouton <b>Créer un produit</b>, un formulaire s'ouvre. En cliquant sur <b>Enregistrer</b>, on ajoute le produit à la base de données.</li>
+        </ol>
+        <h5>Modifier ou supprimer un produit</h5>
+        <p>
+            On peut modifier un produit en cliquant sur le bouton à droite de la ligne du produit (le bouton bleu avec le crayon). La suppression se fait dans la page de modification.
+        </p>
+        <br/>
+    </div>
+    {% if is_granted('ROLE_ADMIN') %}
+    <div>
+        <h4>Gestion des utilisateurs</h4>
+        <br/>
+        <p>
+            Cet onglet permet la gestion, c'est à dire la création,la modification ou la suppresion d'utilisateurs.
+            Chaque utilisateur possède un identifiant <em>unique</em>, un email associé, un mot de passe qui lui sera envoyé par mail à la création de son compte, et enfin,
+            un rôle. Ce rôle détermine les droits de l'utilisateur sur l'application. Il existe 3 rôles:
+        </p>
+        <ul>
+            <li><b>ADMIN</b> : Il possède <em><b>tous</b></em> les droits, peut supprimer toute la base de données (produits, utilisateurs...) en quelques clics seulement. <em>A manier avec précaution !!</em></li><br/>
+            <li><b>PROF</b> : Il possède les droits nécessaires à la création, la modification mais pas la suppression des produits dans la base de données. Il peut créer des utilisateurs de rôle ETUDIANT seulement.</li><br/>
+            <li><b>ETUDIANT</b> : Il possède seulement le droit de faire des recherches de produits, et de modifier la quantité des produits.</li>
+        </ul>
+
+
+    </div>
+    {% endif %}
+
 {% endblock %}
