--- a/site/templates/produit/_form_search.html.twig
+++ b/site/templates/produit/_form_search.html.twig
@@ -1,15 +1,18 @@
 {{ form_start(form, {'method': 'POST', 'attr': {'class': 'form-horizontal row'}}) }}
-    <div class="form-group col-sm-3">
+    <div class="form-group col-sm-4">
         {{ form_widget(form.reference, {'attr': {'class': 'form-control', 'placeholder': 'Référence'}}) }}
     </div>
-    <div class="form-group col-sm-3">
+    <div class="form-group col-sm-4">
         {{ form_widget(form.designation, {'attr': {'class': 'form-control', 'placeholder': 'Désignation'}}) }}
     </div>
-    <div class="form-group col-sm-3">
+    <div class="form-group col-sm-4">
         {{ form_widget(form.quantite, {'attr': {'class': 'form-control', 'placeholder': 'Quantité min'}}) }}
     </div>
 
-    <div class="form-group col-sm-3">
-        {{ form_widget(form.submit, {'attr': {'class': 'btn btn-success form-control'}, 'label': 'Lancer la recherche'}) }}
+    <div class="form-group col-sm-2">
+        {{ form_widget(form.submit, {'attr': {'class': 'btn btn-success form-control'}, 'label': 'Rechercher'}) }}
+    </div>
+    <div class="form-group col-sm-2">
+        <a href="{{ url("app_produit_index") }}" class="btn btn-secondary form-control">Annuler</a>
     </div>
 {{ form_end(form) }}
