--- a/site/templates/produit/edit.html.twig
+++ b/site/templates/produit/edit.html.twig
@@ -23,3 +23,11 @@
         </div>
     </div>
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
+    <script type="text/javascript">
+        $(".select2").select2({width: '100%'});
+    </script>
+{% endblock %}
