--- a/site/templates/base.html.twig
+++ b/site/templates/base.html.twig
@@ -48,6 +48,18 @@
         </nav>
 
         <div class="container">
+            <section class="content-header" id="flash-message">
+                {% block session_messages %}
+                    {% for label, flashes in app.session.flashbag.all %}
+                        {% for flash in flashes %}
+                            <div class="alert alert-{{ label }}">
+                                {{ flash }}
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                {% endblock %}
+            </section>
+          
             {% block body %}{% endblock %}
         </div>
 
